--- a/animations.css
+++ b/animations.css
@@ -1,4 +1,4 @@
-.moveUpRevealOverlay {
+.moveDownRevealOverlay {
     opacity: 0;
     transition: opacity 2s;
     transform: translateX(-500px);
@@ -21,7 +21,7 @@
 
 .active {
     opacity: 1;
-    transition: opacity .5s ease-out, transform .6s ease-out;
+    transition: opacity 0.5s ease-out, transform .6s ease-out;
     transform: translateX(0);
 }
 
@@ -33,4 +33,16 @@
 .rotateOpacity {
     opacity: 1;
     transform: rotate(60deg);
+}
+
+.moveDown {
+    transform: translateY(-50px);
+    opacity: 0;
+    transition: opacity 1s, translate 1.5s;
+}
+
+.moveDownActive {
+    opacity: 1;
+    transition: 1s;
+    transform: translateY(0px);
 }
