--- a/animations.css
+++ b/animations.css
@@ -38,7 +38,7 @@
 .moveDown {
     transform: translateY(-50px);
     opacity: 0;
-    transition: opacity 1s, translate 1.5s;
+    transition: opacity 1s, translate ease-out 5s;
 }
 
 .moveDownActive {
