--- a/desktop.css
+++ b/desktop.css
@@ -172,7 +172,7 @@
         font-weight: 600;
         font-size: .9rem;
         height: 100%;
-        padding: 20px;
+        padding: 18px 20px;
         display: flex;
         -ms-align-items: center;
         align-items: center;
