--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --ultraDarkColour: #0b214f;
     --lightColour: #4598F1;
     --verylightColour: #E6F1FA;
-    --lightGrey: rgba(0, 0, 0, 0.01);
+    --lightGrey: rgba(0, 0, 0, 0.02);
     --borderColour: #e3e3e3;
     --mainFont: 'Josefin Sans', sans-serif;
     /* --mainFont: 'Taviraj', serif; */
@@ -106,7 +106,7 @@ h5 {
 
     display: flex;
     flex-direction: column;
-    background-image: url("src/logo.png");
+    //background-image: url("src/logo.png");
     background-size: cover;
 }
 
@@ -155,7 +155,7 @@ h5 {
 .overlayNavigation-item {
     font-family: var(--mainFont);
     font-size: 2rem;
-    font-weight: 300;
+    font-weight: 500;
     color: #e5e5e5;
 
     opacity: 0;
@@ -680,8 +680,7 @@ h5 {
 
 .yPhysioWrapper {
     background-color: var(--ultraDarkColour);
-    //background-image: url("https://www.transparenttextures.com/patterns/az-subtle.png");
-    width: 100%;
+    width: 95%;
     //border-radius: 15px;
     margin: 0 auto;
     padding: 60px 25px;
@@ -689,6 +688,8 @@ h5 {
     flex-direction: column;
     gap: 1rem;
     border: solid 1px black;
+    //background-image: url("src/logo.png");
+    position: relative;
 }
 
 .yPhysioWrapper .text {
@@ -732,7 +733,7 @@ h5 {
 .headlineWrapper {
     height: 55px;
     position: absolute;
-    top: -26px;
+    top: -27px;
     left: 20px;
     display: flex;
     flex-direction: column;
@@ -750,6 +751,7 @@ h5 {
     text-align: left;
     padding: 0 15px;
     z-index: 1;
+
 }
 
 .borderLines {
