--- a/desktop.css
+++ b/desktop.css
@@ -7,8 +7,8 @@
     .navigationBar {
         font-family: var(--mainFont);
         background-color: rgba(255, 255, 255, 1.0);
-        //position: fixed;
-        //top: 0;
+        position: fixed;
+        top: 0;
         width: 100%;
         z-index: 2;
         //display: flex;
@@ -32,7 +32,7 @@
         display: flex;
         justify-content: space-between;
         transition: .2s;
-        height: 70px;
+        height: 80px;
         padding: 0;
     }
 
@@ -44,34 +44,6 @@
     #navigationBar_logo {
         height: 100%;
         display: flex;
-    }
-
-    .addressBarWrapper {
-        font-family: "Poppins", sans-serif;
-        color: var(--ultraDarkColour);
-        font-size: .9rem;
-        display: flex;
-        gap: 1.5rem;
-    }
-
-    .addressBarItem {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-    }
-
-    .addressBarItem_img {
-        width: 50px;
-        height: 50px;
-        border: solid 1px #eaeaea;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .addressBarItem_img .fa-location-dot {
-        color: var(--ultraDarkColour);
-        font-size: 2rem;
     }
 
     .navigationBarBelow {
@@ -115,14 +87,6 @@
         min-height: 500px;
     }
 
-    #header-emptyTop {
-        width: 100%;
-        height: 110px;
-        display: block;
-
-        display: none;
-    }
-
     #logo {
         height: 100%;
     }
@@ -137,7 +101,6 @@
 
     .navigationBar_logoTextItem1 {
         color: var(--darkColour);
-        overflow: hidden;
         font-weight: 500;
         font-family: arial;
         font-size: 1.4rem;
@@ -147,7 +110,6 @@
 
     .navigationBar_logoTextItem2 {
         color: black;
-        overflow: hidden;
         transition: ease-out .2s;
         font-size: 1.2rem;
     }
@@ -170,7 +132,7 @@
     #navigationBar_menuItem {
         cursor: pointer;
         font-weight: 500;
-        font-size: .9rem;
+        font-size: 1rem;
         height: 100%;
         padding: 18px 20px;
         display: flex;
@@ -183,16 +145,7 @@
         color: white;
     }
 
-    #header {
-        display: flex;
-        flex-direction: column;
-    }
 
-
-    #header_inner {
-        display: flex;
-        align-items: center;
-    }
 
     .headerContactWrapper {
         position: relative;
@@ -277,7 +230,6 @@
 
         display: flex;
         align-items: center;
-        overflow: hidden;
         display: none;
     }
 
@@ -316,7 +268,8 @@
         width: 60%;
         height: 100%;
         //clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
-        clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
+        //clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
+        color: white;
     }
 
     .firstSection-overlay {
@@ -446,7 +399,6 @@
 
 
     #thirdSection {
-        height: 100vh;
         max-height: 800px;
         min-height: 400px;
         background-color: var(--lightGrey);
@@ -469,7 +421,6 @@
 
     .thirdSection_grid > div {
         height: 200px;
-        border-radius: 5px;
         background-position: center;
     }
 
