--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --mainFont: 'Montserrat', sans-serif;
     /* --maintFont: "Poppins", sans-serif; */
     --contentWidth: 80%;
-    --maxWidth: 1200px;
+    --maxWidth: 1500px;
 }
 
 * {
@@ -39,14 +39,21 @@ body {
 h1 {
     font-family: var(--mainFont);
     font-family: 'Taviraj', serif;
-    font-weight: 400;
+
+    font-family: 'Unbounded', sans-serif;
+    font-family: "Poppins", sans-serif;
+
+
+    color: black;
+
+    font-weight: 300;
     font-size: 2.8rem;
-    color: white;
-    line-height: 3.2rem;
-    color: white;
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+    line-height: 2.8rem;
+    //text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
 
     animation: 1s ease-out 0s 1 slideInFromLeft;
+
+
 }
 
 h2 {
@@ -54,10 +61,11 @@ h2 {
     font-size: 1.2rem;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
+    margin: 1rem 0 0.5rem 0;
 }
 
 h3 {
-    color: rgba(229, 229, 229, 0.80);
+    color: var(--darkColour);
     font-family: var(--mainFont);
     line-height: 1.4rem;
     font-size: .9rem;
@@ -75,10 +83,18 @@ h4 {
 h5 {
     color: var(--darkColour);
     font-family: var(--mainFont);
-    font-family: 'Taviraj', serif;
-    font-size: 2.2rem;
-    line-height: 2.5rem;
+    font-size: 1.8rem;
+    line-height: 2rem;
     font-weight: 400;
+    text-align: left;
+}
+
+p {
+    color: black;
+    font-family: var(--mainFont);
+    font-size: 1rem;
+    line-height: 1.5rem;
+    margin: .5rem 0;
 }
 
 .smallText {
@@ -86,7 +102,7 @@ h5 {
     font-size: 1rem;
     font-weight: 300;
     max-width: 800px;
-    margin: .5rem auto;
+    text-align: left;
 }
 
 /*********** OVERLAY ***********/
@@ -258,9 +274,6 @@ h5 {
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 500px;
-    background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
-    background-size: cover;
 }
 
 #header {
@@ -268,19 +281,21 @@ h5 {
     width: 100%;
     height: 100%;
     align-items: center;
-    overflow: hidden;
 
     display: flex;
     flex-direction: column;
 }
 
-#header-leftSide {
-    background-color: rgba(23, 46, 96, 0.95);
-    position: absolute;
-    width: 100%;
+#header-left {
     height: 100%;
-    z-index: 0;
-    background-color: rgba(11, 33, 79, 0.95);
+}
+
+#header-right {
+    margin-top: 1rem;
+}
+
+#header-left img {
+    width: 100%;
 }
 
 .information {
@@ -293,20 +308,26 @@ h5 {
     display: none;
 }
 
-#header_inner {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
 #header_headlineWrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
     padding: 30px;
-    overflow: hidden;
+}
+
+#header_headlineWrapper h5 {
+    margin: 1rem 0;
+    font-size: 1.8rem;
+    font-weight: 300;
+}
+
+#header_headlineWrapper p {}
+
+.line {
+    background-color: var(--ultraDarkColour);
+    height: 3px;
+    width: 25%;
+    margin: 1.2rem 0;
 }
 
 .headerContactWrapper {
@@ -323,6 +344,7 @@ h5 {
     //align-items: center;
     background-color: white;
     //border-bottom: solid 4px rgba(0, 0, 0, 0.11);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.08);
 }
 
 .navigationBar_inner {
@@ -409,6 +431,10 @@ h5 {
     margin: 3.5px auto;
 }
 
+#physioHelpsWrapper {
+    background-color: var(--lightGrey);
+}
+
 .physioHelps {
     text-align: center;
     padding: 2rem 2rem;
@@ -424,36 +450,30 @@ h5 {
 }
 
 .physioHelpsCard {
-    background-color: var(--lightGrey);
     padding: 1.2rem;
     text-align: center;
     font-family: Montserrat;
-    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 15px -3px, rgba(0, 0, 0, 0.02) 0px 4px 6px -2px;
 
     max-width: 400px;
+
+    //border: solid 1px #f2f2f2;
 }
 
 .physioHelpsCardHeadline {
     font-size: 1.2rem;
     color: var(--darkColour);
-    margin-bottom: .4rem;
+    margin-bottom: .6rem;
     font-weight: 500;
 }
 
 .physioHelpsCardText {
     font-size: .9rem;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.3rem;
 }
 
-
-#leistungenWrapper {
-    text-align: center;
-    padding: 1rem 0;
-    display: flex;
-    flex-direction: column;
-}
 
 .leistungen {
     text-align: center;
@@ -463,13 +483,13 @@ h5 {
 .leistungenCards {
     display: flex;
     flex-direction: column;
-    background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
+    //background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
     background-attachment: fixed;
 }
 
 .leistungenCard {
-    padding: 2rem 2rem;
-    background-color: rgba(23, 46, 96, 0.95);
+    padding: 1.5rem 2rem;
+    background-color: rgba(23, 46, 96, 1);
     color: white;
     font-family: Montserrat;
     text-align: center;
@@ -478,22 +498,19 @@ h5 {
 }
 
 .leistungenCard .smallText {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .leistungenCard i {
     color: white;
-    font-size: 3.2rem;
+    font-size: 3rem;
+    margin: 0;
 }
 
 .leistungenCardC {
-    background-color: rgba(11, 33, 79, 0.95);
+    background-color: rgba(11, 33, 79, 1);
     width: 100%;
 }
-
-
-
-
 
 #firstSection {
     position: relative;
@@ -516,10 +533,81 @@ h5 {
 }
 
 .secondSection_inner {
-    background-color: var(--verylightColour);
-    background-color: #f7f7f7;
+    //background-color: var(--verylightColour);
+    //background-color: #f7f7f7;
     padding: 40px 25px;
     padding-bottom: 110px;
+}
+
+#newLeistungenWrapper {
+    width: 100%;
+    overflow: hidden;
+}
+
+.newLeistungen {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+    max-width: var(--maxWidth);
+}
+
+.newLeistungenLeft {}
+
+.newLeistungenLeftInner {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 3rem;
+
+    position: sticky;
+    top: 70px;
+}
+
+.newLeistungenLeft h5 {
+    text-align: left;
+}
+
+.newLeistungenLeft p {}
+
+.newLeistungenRight {
+    display: flex;
+    justify-content: center;
+}
+
+.leistungenRightGrid {
+    display: grid;
+    gap: 50px;
+    grid-template-columns: auto;
+    padding: 0 3rem;
+}
+
+.newLeistungen-card {
+    font-size: 30px;
+    text-align: center;
+    width: 100%;
+    height: 300px;
+    position: relative;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.31);
+    cursor: pointer;
+}
+
+.newLeistungen-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.newLeistungen-cardText {
+    background-color: var(--ultraDarkColour);
+    font-family: var(--mainFont);
+    position: absolute;
+    bottom: 0;
+    color: white;
+
+    font-size: 1rem;
+    padding: 20px;
+    width: 100%;
 }
 
 .sectionRight {
@@ -580,9 +668,7 @@ h5 {
     display: none;
 }
 
-#thirdSection {
-    display: none;
-}
+#thirdSection {}
 
 #testSection h5 {
     text-align: center;
