--- a/tablet.css
+++ b/tablet.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 601px) {
 
     section {
-        padding: 6rem 0 7rem 0;
+        padding: 10rem 0 10rem 0;
     }
 
 
@@ -9,15 +9,10 @@
 
 
     h1 {
-        font-family: var(--mainFont);
-        font-family: 'Taviraj', serif;
-        font-weight: 400;
-        font-size: 4.5rem;
-        color: white;
-        line-height: 5.5rem;
-        color: white;
+        font-weight: 300;
+        font-size: 6rem;
+        line-height: 6.2rem;
         //text-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
-        text-align: center;
     }
 
     h2 {
@@ -28,7 +23,6 @@
     }
 
     h3 {
-        color: #e5e5e5;
         font-family: var(--mainFont);
         line-height: 1.8rem;
         font-size: 1rem;
@@ -46,14 +40,17 @@
 
     h5 {
         color: var(--darkColour);
-        font-family: var(--mainFont);
-        font-family: 'Taviraj', serif;
+        font-family: 'Unbounded', sans-serif;
+        font-family: "Poppins", sans-serif;
         font-size: 3rem;
         line-height: 3.5rem;
         font-weight: 400;
+        text-align: center;
     }
 
-
+    .smallText {
+        text-align: center;
+    }
 
     .yPhysioHeader {
         width: 100%;
@@ -69,64 +66,96 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        height: 100vh;
-        background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
+        //background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
         background-size: cover;
         //background-attachment: fixed;
+        background-image: none;
+        height: 100vh;
+        min-height: 700px;
+        max-height: 1000px;
+    }
+
+    .headerPictureCollection {
+        position: absolute;
+        bottom: 0;
+        height: 120px;
+        height: 15%;
+        width: 60%;
+        right: 0;
+        z-index: 1;
+
+
+        display: flex;
+        justify-content: space-between;
+        max-height: 120px;
+        min-height: 80px;
+    }
+
+    .headerPicture {
+        width: 31%;
+        background-color: black;
+
+        background-image: url("src/training.jpg");
+        background-size: cover;
+        background-position: center;
+
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.32);
     }
 
     #header {
         position: relative;
         width: 100%;
-        height: 100%;
-        display: flex;
         align-items: center;
-        overflow: hidden;
+        background-size: cover;
     }
 
 
     #header_inner {
-        width: var(--contentWidth);
-        max-width: var(--maxWidth);
         margin: 0 auto;
-        display: flex;
-    }
-
-    #header-leftSide {
-        background-color: rgba(0, 0, 0, 0.3);
-        //background-color: rgba(11, 33, 79, 1);
-        position: absolute;
         width: 100%;
         height: 100%;
-        z-index: 0;
 
-    }
-
-    #header_headlineWrapper {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
-        position: relative;
-        //max-width: calc(var(--contentWidth)/2);
-        margin: 0 auto;
     }
 
-    #physioHelpsWrapper {
-        padding: 8rem 0;
+    #header-left {
+        width: 50%;
     }
+
+    #header-right {
+        width: 50%;
+        display: flex;
+        align-items: center;
+    }
+
+    #header_headlineWrapper {}
+
+    #header_headlineWrapper h1,
+    #header_headlineWrapper p {
+        text-align: left;
+        text-shadow: none;
+        color: var(--ultraDarkColour);
+    }
+
+    #header-emptyTop {
+        width: 100%;
+        height: 110px;
+        display: block;
+    }
+
+    #physioHelpsWrapper {}
 
     .physioHelps {
         padding: 0;
     }
 
-    #physioHelpsWrapper h5 {
+    #physioHelpsWrapper h5,
+    #leistungenWrapper h5 {
         margin: 0 auto 1rem auto;
         text-align: center;
     }
 
-    #physioHelpsWrapper .smallText {
+    .physioHelps .smallText {
         max-width: 800px;
         margin: 0 auto;
         text-align: center;
@@ -144,27 +173,33 @@
 
     .physioHelpsCard {
         //max-width: 360px;
-        padding: 2rem 3rem;
+        padding: 1.5rem 1.5rem;
     }
+
+    #leistungenWrapper {}
 
     .leistungen {
         padding: 0;
+    }
+
+    .leistungen .smallText {
+        text-align: center;
+        margin: 0 auto;
     }
 
     .leistungenCards {
         display: flex;
         flex-direction: row;
         margin: 4rem auto 0 auto;
+        justify-content: center;
     }
 
     .leistungenCard {
-        padding: 2rem 5rem;
+        padding: 3rem 2rem;
         width: 33.33%;
+        width: 420px;
     }
 
-    #firstSection {
-        overflow: hidden;
-    }
 
     .firstSection_inner {
         width: 90%;
@@ -179,13 +214,20 @@
 
     #secondSection {
         position: relative;
-        background-color: #f7f7f7;
+        background-color: var(--lightGrey);
     }
 
     .secondSection_inner {
         width: 90%;
         margin: 0 auto;
         padding: 0;
+    }
+
+    .leistungenRightGrid {
+        display: grid;
+        gap: 50px;
+        grid-template-columns: auto auto;
+        padding: 0 3rem;
     }
 
     .aboutMeTextBox {
@@ -197,6 +239,10 @@
 
     .aboutMeTextBox .text {
         width: 90%;
+    }
+
+    .aboutMeTextBox h5 {
+        text-align: left;
     }
 
     .aboutMeImageBox {
