--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ p {
     font-size: 1rem;
     line-height: 1.5rem;
     margin: .5rem 0;
+    text-align: left;
 }
 
 .smallText {
@@ -296,6 +297,8 @@ p {
 
 #header-left img {
     width: 100%;
+    height: 450px;
+    object-fit: cover;
 }
 
 .information {
@@ -318,15 +321,12 @@ p {
 #header_headlineWrapper h5 {
     margin: 1rem 0;
     font-size: 1.8rem;
-    font-weight: 300;
 }
 
-#header_headlineWrapper p {}
-
 .line {
-    background-color: var(--ultraDarkColour);
+    background-color: var(--darkColour);
     height: 3px;
-    width: 25%;
+    width: 70px;
     margin: 1.2rem 0;
 }
 
@@ -557,7 +557,6 @@ p {
 .newLeistungenLeftInner {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     padding: 3rem;
 
     position: sticky;
@@ -567,8 +566,6 @@ p {
 .newLeistungenLeft h5 {
     text-align: left;
 }
-
-.newLeistungenLeft p {}
 
 .newLeistungenRight {
     display: flex;
