--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
     --ultraDarkColour: #0b214f;
     --lightColour: #4598F1;
     --verylightColour: #E6F1FA;
-    --lightGrey: rgba(0, 0, 0, 0.03);
-    --lightGrey: rgba(152, 187, 242, 0.08);
+    --lightGrey: rgba(0, 0, 0, 0.02);
     --borderColour: #e3e3e3;
     --mainFont: 'Josefin Sans', sans-serif;
     /* --mainFont: 'Taviraj', serif; */
@@ -48,8 +47,8 @@ h1 {
     color: black;
 
     font-weight: 300;
-    font-size: 2.8rem;
-    line-height: 2.8rem;
+    font-size: 2.5rem;
+    line-height: 2.5rem;
     //text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
 
     animation: 1s ease-out 0s 1 slideInFromLeft;
@@ -300,6 +299,7 @@ p {
     width: 100%;
     height: 450px;
     object-fit: cover;
+    object-position: 0 0;
 }
 
 .information {
@@ -321,12 +321,12 @@ p {
 
 #header_headlineWrapper h5 {
     margin: .3rem 0;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
 }
 
 .line {
     background-color: var(--darkColour);
-    height: 3px;
+    height: 2px;
     width: 70px;
     margin: 1.2rem 0;
 }
@@ -456,8 +456,9 @@ p {
     text-align: center;
     font-family: Montserrat;
     background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 15px -3px, rgba(0, 0, 0, 0.02) 0px 4px 6px -2px;
+    //box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 15px -3px, rgba(0, 0, 0, 0.02) 0px 4px 6px -2px;
 
+    border: solid 1px rgba(0, 0, 0, 0.04);
     max-width: 400px;
 
     //border: solid 1px #f2f2f2;
@@ -559,7 +560,7 @@ p {
 .newLeistungenLeftInner {
     display: flex;
     flex-direction: column;
-    padding: 3rem;
+    padding: 2rem;
 
     position: sticky;
     top: 70px;
@@ -578,7 +579,7 @@ p {
     display: grid;
     gap: 50px;
     grid-template-columns: auto;
-    padding: 0 3rem;
+    padding: 0 2rem;
 }
 
 .newLeistungen-card {
