--- a/tablet.css
+++ b/tablet.css
@@ -1,5 +1,11 @@
 @media only screen and (min-width: 601px) {
 
+
+
+    * {
+        display: none;
+    }
+
     section {
         padding: 10rem 0 10rem 0;
     }
