--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ h4 {
 }
 
 h5 {
-    color: var(--darkColour);
     font-family: var(--mainFont);
     font-size: 2.2rem;
     line-height: 2.6rem;
@@ -90,7 +89,6 @@ h5 {
 }
 
 p {
-    color: black;
     font-family: var(--mainFont);
     font-size: 1rem;
     line-height: 1.5rem;
@@ -291,15 +289,12 @@ p {
     height: 100%;
 }
 
-#header-right {
-    margin-top: 1rem;
-}
-
 #header-left img {
     width: 100%;
     height: 450px;
     object-fit: cover;
     object-position: 0 0;
+    display: block;
 }
 
 .information {
@@ -316,12 +311,22 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 30px;
+    padding: 40px 30px;
 }
 
 #header_headlineWrapper h5 {
     margin: .3rem 0;
     font-size: 1.5rem;
+}
+
+.subTitle {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.subTitle .line {
+    width: 40px;
 }
 
 .line {
@@ -434,11 +439,18 @@ p {
 
 #physioHelpsWrapper {
     background-color: var(--lightGrey);
+    background-color: var(--darkColour);
+    background-color: rgb(34, 57, 108);
+    color: white;
+}
+
+#physioHelpsWrapper .line {
+    background-color: white;
 }
 
 .physioHelps {
     text-align: center;
-    padding: 2rem 2rem;
+    padding: 40px 30px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -452,6 +464,7 @@ p {
 }
 
 .physioHelpsCard {
+    color: black;
     padding: 1.2rem;
     text-align: center;
     font-family: Montserrat;
@@ -605,8 +618,8 @@ p {
     bottom: 0;
     color: white;
 
-    font-size: 1rem;
-    padding: 20px;
+    font-size: 1.1rem;
+    padding: 14px;
     width: 100%;
 }
 
