--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 :root {
+    --primary: white;
+    --secondary: #f5f5f5;
     --mainColour: #0071C7;
     --darkColour: #172E60;
     --ultraDarkColour: #0b214f;
@@ -439,21 +441,31 @@ p {
 }
 
 #physioHelpsWrapper {
-    background-color: var(--lightGrey);
-    background-color: var(--darkColour);
-    color: white;
+    background-color: var(--secondary);
+}
+
+.physioHelps {
+    text-align: center;
+    padding: 30px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 #physioHelpsWrapper .line {
     background-color: white;
 }
 
-.physioHelps {
-    text-align: center;
-    padding: 40px 25px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.sectionImagePadding {
+    padding: 10px;
+    display: none;
+}
+
+.sectionImage {
+    background: url("src/IMG_3945.JPG");
+    background-position: center;
+    background-size: cover;
+    height: 80px;
 }
 
 .physioHelpsCards {
@@ -759,7 +771,6 @@ p {
 
 #footer {
     background-color: var(--ultraDarkColour);
-    background-color: rgba(11, 33, 79, 0.95);
     width: 100%;
     position: relative;
 }
@@ -855,7 +866,6 @@ p {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("https://i.pinimg.com/originals/96/ef/f9/96eff9a254b6dacbaec2f46c5d3639c4.jpg");
     z-index: -1;
     background-size: cover;
     background-position: center;
