--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ p {
     line-height: 1.5rem;
     margin: .5rem 0;
     text-align: left;
+    max-width: 500px;
 }
 
 .smallText {
@@ -167,14 +168,14 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30px;
+    gap: 20px;
     padding: 50px 0px;
     height: 100vh;
 }
 
 .overlayNavigation-item {
     font-family: var(--mainFont);
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-weight: 500;
     color: #e5e5e5;
 
@@ -473,6 +474,7 @@ p {
     flex-direction: column;
     gap: 2.5rem;
     margin: 2rem 0;
+    padding: 0 1rem;
 }
 
 .physioHelpsCard {
@@ -946,6 +948,34 @@ p {
     //align-items: center;
     //gap: 10px;
     max-width: 100%;
+}
+
+#contact {
+    padding: 8px;
+    height: 1000px;
+
+    background-color: var(--secondary);
+}
+
+.contactHeadline {
+    background-image: url("src/contactImage.JPG");
+    background-size: cover;
+    background-position: center;
+    height: 100px;
+    width: 100%;
+
+    position: sticky;
+    top: 8px;
+}
+
+.contactHeadline h5 {
+    color: white;
+    font-weight: 400;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    padding: 5px;
 }
 
 .headlineWrapper {
