--- a/desktop.css
+++ b/desktop.css
@@ -1,5 +1,17 @@
 @media (min-width: 1101px) {
 
+
+    p {
+        font-size: 1.1rem;
+        line-height: 1.8rem;
+        text-align: center;
+    }
+
+    h5 {
+        text-align: center;
+    }
+
+
     .overlay {
         display: none;
     }
@@ -32,7 +44,7 @@
         display: flex;
         justify-content: space-between;
         transition: .2s;
-        height: 80px;
+        height: 70px;
         padding: 0;
     }
 
@@ -93,8 +105,12 @@
 
     #header-emptyTop {
         width: 100%;
-        height: 110px;
+        height: 100px;
         display: block;
+    }
+
+    #physioHelpsWrapper {
+        padding: 8rem 0;
     }
 
     .physioHelpsCards {
@@ -102,12 +118,33 @@
         justify-content: space-between;
         margin: 4rem auto 0 auto;
         max-width: 1400px;
+        width: 100%;
+    }
+
+    .physioHelpsCard {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #newLeistungenWrapper {
+        padding: 4rem 0;
     }
 
     .newLeistungen {
         flex-direction: row;
         max-width: 1400px;
         width: 90%;
+        gap: 2rem;
+    }
+
+    .newLeistungenLeft {
+        margin: auto auto;
+    }
+
+    .newLeistungen-card {
+        width: 260px;
+        height: 260px;
     }
 
     #logo {
@@ -638,6 +675,22 @@
         align-items: center;
         gap: 10px;
         max-width: 30%;
+    }
+
+    #contact {
+        display: flex;
+        padding: 0;
+    }
+
+    #contact > div {
+        width: 50%;
+    }
+
+    .contactHeadline {
+        position: relative;
+        top: 0;
+        height: 400px;
+        background-position: center;
     }
 
     .headlineWrapper {
