--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary: white;
-    --secondary: #f5f5f5;
+    --secondary: #fbfbfb;
     --mainColour: #0071C7;
     --darkColour: #172E60;
     --ultraDarkColour: #0b214f;
@@ -499,8 +499,8 @@ p {
 }
 
 .physioHelpsCardText {
-    font-size: .9rem;
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: 400;
     line-height: 1.3rem;
 }
 
