--- a/animations.css
+++ b/animations.css
@@ -23,6 +23,7 @@
     transition: opacity .2s ease-out, transform .5s ease-out;
     transform: translateX(0);
     transform: translateY(0);
+    transition-delay: 0s;
 }
 
 .rotateOpacitySel {
