--- a/desktop.css
+++ b/desktop.css
@@ -1,17 +1,5 @@
 @media (min-width: 1101px) {
 
-
-    p {
-        font-size: 1.1rem;
-        line-height: 1.8rem;
-        text-align: center;
-    }
-
-    h5 {
-        text-align: center;
-    }
-
-
     .overlay {
         display: none;
     }
@@ -22,9 +10,9 @@
         position: fixed;
         top: 0;
         width: 100%;
-        z-index: 2;
-        //display: flex;
-        //align-items: center;
+        z-index: 1;
+        display: flex;
+        align-items: center;
         transition: ease-out .2s;
     }
 
@@ -39,13 +27,13 @@
 
         width: var(--contentWidth);
         max-width: var(--maxWidth);
-        margin: 15px auto;
+        margin: 10px auto;
 
         display: flex;
         justify-content: space-between;
         transition: .2s;
         height: 70px;
-        padding: 0;
+        padding: 0 5px;
     }
 
     .navigationBar-innerScrolled {
@@ -58,92 +46,15 @@
         display: flex;
     }
 
-    .navigationBarBelow {
-        width: 100%;
-        border-top: solid 1px #f5f5f5;
-
-        display: flex;
-        align-items: center;
-
-        background-color: var(--lightGrey);
-    }
-
-    .navigationBarBelow_inner {
-        width: var(--contentWidth);
-        max-width: var(--maxWidth);
-        margin: 0px auto;
-
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        transition: .2s;
-    }
-
-    .navigationBarBelow_social {
-        display: flex;
-        gap: 1.5rem;
-    }
-
-    .navigationBarBelow_social i {
-        font-size: 2.3rem;
-        color: var(--ultraDarkColour);
-    }
-
-    .used {
-        background-color: var(--ultraDarkColour);
-        color: white;
-    }
-
-    .used #headerWrapper {
+    #headerWrapper {
         height: 100vh;
         min-height: 500px;
     }
 
-    #headerWrapper {
-        max-height: none;
-    }
-
     #header-emptyTop {
         width: 100%;
-        height: 100px;
+        height: 110px;
         display: block;
-    }
-
-    #physioHelpsWrapper {
-        padding: 8rem 0;
-    }
-
-    .physioHelpsCards {
-        flex-direction: row;
-        justify-content: space-between;
-        margin: 4rem auto 0 auto;
-        max-width: 1400px;
-        width: 100%;
-    }
-
-    .physioHelpsCard {
-        display: flex;
-        flex-direction: column;
-    }
-
-    #newLeistungenWrapper {
-        padding: 4rem 0;
-    }
-
-    .newLeistungen {
-        flex-direction: row;
-        max-width: 1400px;
-        width: 90%;
-        gap: 2rem;
-    }
-
-    .newLeistungenLeft {
-        margin: auto auto;
-    }
-
-    .newLeistungen-card {
-        width: 260px;
-        height: 260px;
     }
 
     #logo {
@@ -160,6 +71,7 @@
 
     .navigationBar_logoTextItem1 {
         color: var(--darkColour);
+        overflow: hidden;
         font-weight: 500;
         font-family: arial;
         font-size: 1.4rem;
@@ -169,6 +81,7 @@
 
     .navigationBar_logoTextItem2 {
         color: black;
+        overflow: hidden;
         transition: ease-out .2s;
         font-size: 1.2rem;
     }
@@ -185,26 +98,27 @@
     #navigationBar_menu {
         display: flex;
         align-items: center;
-        height: 100%;
+        gap: 40px;
+        padding: 0 30px;
     }
 
     #navigationBar_menuItem {
+        color: var(--darkColour);
         cursor: pointer;
-        font-weight: 500;
-        font-size: 1rem;
-        height: 100%;
-        padding: 18px 20px;
+        font-weight: 600;
+        font-size: .9rem;
+    }
+
+    #header {
         display: flex;
-        -ms-align-items: center;
+        flex-direction: column;
+    }
+
+
+    #header_inner {
+        display: flex;
         align-items: center;
     }
-
-    #navigationBar_menuItem:hover {
-        background-color: var(--ultraDarkColour);
-        color: white;
-    }
-
-
 
     .headerContactWrapper {
         position: relative;
@@ -217,7 +131,6 @@
         font-family: var(--mainFont);
         border-top: solid 1px rgba(0, 0, 0, 0.12);
         gap: 80px;
-        display: none;
     }
 
     .headerContact {
@@ -248,9 +161,12 @@
 
     .text {
         font-family: var(--mainFont);
+        color: var(--darkColour);
         font-size: 1.1rem;
-        font-weight: 400;
+        font-weight: 500;
         line-height: 2rem;
+        width: 90%;
+        max-width: 550px;
     }
 
     #content {
@@ -259,7 +175,8 @@
     }
 
     .cta-button {
-        background-color: var(--darkColour);
+        background-color: var(--lightColour);
+        background-color: #0072c9;
         color: white;
         border-radius: 5px;
         padding: 14px 18px;
@@ -283,19 +200,27 @@
 
     #firstSection {
         //height: 100vh;
-        height: 90vh;
-        max-height: 90vh;
-        min-height: 700px;
+        max-height: 100vh;
+        min-height: 800px;
 
         display: flex;
         align-items: center;
-        display: none;
+        overflow: hidden;
     }
 
     .firstSection_inner {
         width: var(--contentWidth);
         max-width: var(--maxWidth);
         padding: 0;
+    }
+
+    .sectionLeft {
+        width: 65%;
+        gap: 0;
+    }
+
+    .sectionLeft h5 {
+        width: 50%;
     }
 
     .sectionRight {
@@ -312,11 +237,13 @@
     }
 
     #secondSection {
+        height: 100vh;
+        max-height: 800px;
         min-height: 600px;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 6rem 0;
+
     }
 
     .secondSection-overlay {
@@ -324,11 +251,9 @@
         position: absolute;
         top: 0;
         width: 70%;
-        width: 60%;
         height: 100%;
         //clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
-        //clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
-        color: white;
+        clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
     }
 
     .firstSection-overlay {
@@ -458,13 +383,12 @@
 
 
     #thirdSection {
+        height: 100vh;
         max-height: 800px;
         min-height: 400px;
         background-color: var(--lightGrey);
         display: flex;
         align-items: center;
-
-        display: none;
     }
 
     .thirdSection_inner {
@@ -482,6 +406,7 @@
 
     .thirdSection_grid > div {
         height: 200px;
+        border-radius: 8px;
         background-position: center;
     }
 
@@ -563,7 +488,7 @@
     }
 
     #testSection {
-        //height: 100vh;
+        height: 100vh;
         min-height: 500px;
         max-height: 700px;
         display: flex;
@@ -631,139 +556,6 @@
         font-size: .9rem;
         color: var(--darkColour);
         font-weight: 400;
-    }
-
-    .yPhysioWrapper {
-        width: 100%;
-        margin: 0 auto;
-        padding: 120px 0;
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-        border: solid 1px black;
-        //box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
-        display: none;
-    }
-
-    .yPhysioWrapper .text {
-        text-align: center;
-    }
-
-    .yPhysioHeader {
-        color: white;
-        font-size: 3.5rem;
-        text-align: center;
-
-    }
-
-    .yPhysioInner {
-        width: 90%;
-        max-width: var(--maxWidth);
-        margin: 2rem auto 0 auto;
-        gap: 0;
-
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .yPhysio {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        max-width: 30%;
-    }
-
-    #contact {
-        display: flex;
-        padding: 0;
-    }
-
-    #contact > div {
-        width: 50%;
-    }
-
-    .contactHeadline {
-        position: relative;
-        top: 0;
-        height: 400px;
-        background-position: center;
-    }
-
-    .headlineWrapper {
-        height: 55px;
-        position: absolute;
-        top: -26px;
-        left: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .headline {
-        position: relative;
-        color: white;
-        font-size: 1.4rem;
-        line-height: 1.6rem;
-        font-family: var(--mainFont);
-        text-align: left;
-        padding: 0 15px;
-        z-index: 1;
-    }
-
-    .lineTop {
-        width: 0;
-        top: 0;
-        left: 0;
-    }
-
-    .lineTopShow {
-        width: 100%;
-    }
-
-    .lineRight {
-        height: 0;
-        right: 0;
-    }
-
-    .lineRightShow {
-        height: 100%;
-    }
-
-    .lineLeft {
-        height: 0;
-        width: 1px;
-
-        left: 0;
-    }
-
-    .lineLeftShow {
-        height: 100%;
-    }
-
-    .lineBottom {
-        width: 0;
-
-        bottom: 0;
-    }
-
-    .lineBottomShow {
-        width: 100%;
-    }
-
-    .showBorder {
-        opacity: 1;
-    }
-
-    .absoluteBox {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        //border: solid 1.5px #d8d8d8;
-
-        //top: 0.7rem;
     }
 
     #footer {
